# bare-metal-manager-core

./: Cargo.toml
.github/workflows/: ci.yaml
bluefield/charts/carbide-otelcol/: values.schema.json  values.yaml
bluefield/charts/carbide-otelcol/templates/: _helpers.tpl  service.yaml
bluefield/containers/forge-dpu-otel-agent/: Dockerfile
bluefield/containers/otelcol-contrib/: Dockerfile
book/: book.toml  mermaid-init.js  schema-er.css
book/src/: SUMMARY.md  faq.md
book/src/architecture/: overview.md
book/src/development/: schema.md
book/src/kubernetes/: bootstrap.md
book/src/manuals/: ingesting_machines.md  networking_requirements.md  sku_validation.md
book/src/playbooks/: ib_runbook.md
book/src/playbooks/stuck_objects/: adding_new_machines.md  common_mitigations.md  stuck_objects.md  waiting_for_network_config.md
crates/admin-cli/src/: main.rs
crates/admin-cli/src/cfg/: cli_options.rs
crates/admin-cli/src/ip/: args.rs  (+1 more)
crates/agent/src/: dhcp.rs  ethernet_virtualization.rs  health.rs  lib.rs  main_loop.rs  nvue.rs
crates/agent/templates/: default-forge-dhcp-server.conf  nvue_startup_fnn.conf
crates/api/: Cargo.toml
crates/api-db/migrations/: 20260220031300_resource_pool_type_ipv6prefix.sql  20260403042500_backfill_rack_id_switches_power_shelves.sql  20260403122011_migrate_rms_membership_states.sql
crates/api-db/src/: bmc_metadata.rs  compute_allocation.rs  dpa_interface.rs  expected_machine.rs  explored_endpoints.rs  explored_managed_host.rs  extension_service.rs  ib_partition.rs  instance.rs  instance_type.rs  ip_allocator.rs  machine.rs  machine_interface.rs  machine_interface_address.rs  machine_topology.rs  machine_validation_config.rs  machine_validation_suites.rs  managed_host.rs  network_devices.rs  network_security_group.rs  network_segment.rs  nvl_logical_partition.rs  nvl_partition.rs  power_shelf.rs  rack.rs  rack_firmware.rs  redfish_actions.rs  resource_pool.rs  route_servers.rs  sku.rs  switch.rs  tenant.rs  tenant_keyset.rs  vpc.rs
crates/api-model/src/: os.rs
crates/api/src/: api.rs  dpf_services.rs  ethernet_virtualization.rs  ipxe.rs  redfish.rs  setup.rs
crates/api/src/attestation/: measured_boot.rs
crates/api/src/auth/: internal_rbac_rules.rs
crates/api/src/cfg/: file.rs
crates/api/src/dhcp/: discover.rs
crates/api/src/handlers/: attestation.rs  bmc_endpoint_explorer.rs  component_manager.rs  dns.rs  domain.rs  dpa.rs  dpu.rs  expected_machine.rs  expected_power_shelf.rs  extension_service.rs  finder.rs  host_reprovisioning.rs  ib_partition.rs  instance.rs  logical_partition.rs  machine.rs  machine_interface.rs  machine_interface_address.rs  machine_validation.rs  mod.rs  network_devices.rs  network_segment.rs  nvl_partition.rs  power_options.rs  pxe.rs  rack.rs  rack_firmware.rs  redfish.rs  route_server.rs  site_explorer.rs  sku.rs  tenant.rs  tenant_keyset.rs  vpc.rs
crates/api/src/ib_fabric_monitor/: mod.rs
crates/api/src/instance/: mod.rs
crates/api/src/measured_boot/rpc/: bundle.rs  journal.rs  machine.rs  profile.rs  report.rs  site.rs
crates/api/src/measured_boot/tests/: profile.rs  report.rs
crates/api/src/mqtt_state_change_hook/: hook.rs  mod.rs
crates/api/src/network_segment/: allocate.rs
crates/api/src/nvl_partition_monitor/: mod.rs
crates/api/src/preingestion_manager/: mod.rs
crates/api/src/site_explorer/: bmc_endpoint_explorer.rs  machine_creator.rs  mod.rs  redfish.rs
crates/api/src/state_controller/: common_services.rs
crates/api/src/state_controller/dpa_interface/: handler.rs
crates/api/src/state_controller/machine/: handler.rs  io.rs  mod.rs
crates/api/src/state_controller/machine/handler/: sku.rs
crates/api/src/state_controller/rack/: handler.rs
crates/api/src/tests/: create_domain.rs  dpu_machine_update.rs  dpu_nic_firmware.rs  host_bmc_firmware_test.rs  ib_fabric_monitor.rs  ib_instance.rs  ib_partition_lifecycle.rs  instance.rs  instance_allocate.rs  instance_batch_allocate.rs  instance_config_update.rs  instance_os.rs  ipxe.rs  machine_creator.rs  machine_dhcp.rs  machine_find.rs  machine_health.rs  machine_history.rs  machine_interface_addresses.rs  machine_interfaces.rs  machine_power.rs  machine_states.rs  machine_update_manager.rs  measured_boot.rs  network_security_group.rs  network_segment.rs  rack_firmware.rs  resource_pool.rs  site_explorer.rs  sku.rs  vpc.rs  vpc_find.rs  vpc_peering.rs
crates/api/src/tests/common/api_fixtures/: instance.rs  mod.rs  site_explorer.rs  test_managed_host.rs
crates/api/src/tests/dpf/: happy_path.rs
crates/api/src/tests/power_shelf_state_controller/: mod.rs
crates/api/src/tests/rack_state_controller/: mod.rs
crates/api/src/tests/switch_state_controller/: mod.rs
crates/api/src/tests/web/: managed_host.rs
crates/api/src/web/: filters.rs  ib_partition.rs  machine.rs  managed_host.rs  mod.rs  network_segment.rs  nvlink.rs  tenant.rs  vpc.rs
crates/api/templates/: ib_partition_detail.html  logical_partition_detail.html  machine_detail.html  machine_health.html  network_segment_detail.html  power_shelf_detail.html  power_shelf_show.html  rack_detail.html  state_display.html  state_sla_details.html  switch_show.html  tenant_detail.html  vpc_detail.html
crates/bmc-explorer-cli/src/: main.rs
crates/component-manager/: Cargo.toml  build.rs
crates/component-manager/proto/: nvswitch-manager.proto  powershelf-manager.proto
crates/component-manager/src/: component_manager.rs  config.rs  error.rs  lib.rs  mock.rs  nsm.rs  nv_switch_manager.rs  power_shelf_manager.rs  psm.rs  tls.rs  types.rs
crates/dhcp-server/src/: main.rs
crates/dpf/src/: types.rs
crates/health/: Cargo.toml
crates/health-report/src/: lib.rs
crates/health/benches/: processor_pipeline.rs
crates/health/example/: config.example.toml
crates/health/src/: config.rs  discovery.rs  lib.rs
crates/machine-a-tron/src/: api_client.rs
crates/mlxconfig-registry/src/: registries.rs
crates/rpc/: build.rs
crates/rpc/proto/: common.proto  forge.proto
crates/rpc/src/: lib.rs
dev/mac-local-dev/: carbide-api-config.toml
pxe/: Makefile.toml
(+34 files in other folders)
